modified:   projectPage/projectPage.html
Change description

--- a/projectPage/projectPage.html
+++ b/projectPage/projectPage.html
@@ -37,8 +37,7 @@
               <div class="project-about">
                 Welcome to the Todoster Web Application! This simple and
                 user-friendly application helps you manage your tasks and stay
-                organized. This README will provide you with all the information
-                you need to get started, including features and more
+                organized.
               </div>
               <div class="project-tech-stack">
                 <b>Tech Stack: </b> Javascript, CSS and HTML
@@ -109,10 +108,7 @@
               <div class="project-about">
                 NoteX is a simple web-based application that combines the
                 functionality of a basic text editor and a task management tool.
-                It provides users with a convenient platform to jot down notes,
-                create to-do lists, and manage their daily tasks efficiently.
-                With its clean and intuitive interface, this application aims to
-                enhance productivity and organization.
+            
               </div>
               <div class="project-tech-stack">
                 <b>Tech Stack: </b> Javascript, CSS and HTML
