--- a/skillsPage/skillsPage.html
+++ b/skillsPage/skillsPage.html
@@ -65,8 +65,8 @@
                 </div>
                 <div class="skill-box">
                     <!-- <i class="fa-solid fa-s"></i> -->
-                    <img src="/Icons/sql-server-icon-png-29.png" alt="">
-                    <h2>SQL</h2>
+                    <img src="https://res.cloudinary.com/difvkvxuy/image/upload/v1695289578/portfolio%20Image/Lang/267_Python-512_fk9xfa.webp" alt="">
+                    <h2>Python</h2>
                 </div>
                 <div class="skill-box">
                     <!-- <i class="fa-solid fa-s"></i> -->
